[gd_scene load_steps=4 format=3 uid="uid://c8v1b3owo26xt"]

[ext_resource type="Script" path="res://src/ui/components/advance_settings/advance_settings.gd" id="1_mo2dv"]

[sub_resource type="Theme" id="Theme_fdw13"]
Label/colors/font_color = Color(0.164706, 0.164706, 0.164706, 1)

[sub_resource type="Theme" id="Theme_o8ri3"]

[node name="Control_AdvanceSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mo2dv")

[node name="ColorRect_Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.85098, 0.843137, 0.866667, 1)

[node name="VBoxContainer_General" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 120.0
offset_right = 624.0
offset_bottom = 402.0
theme = SubResource("Theme_fdw13")
theme_type_variation = &"2"
theme_override_constants/separation = 15

[node name="VBoxContainer_ProcessTickQuota" type="VBoxContainer" parent="VBoxContainer_General"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10
alignment = 1

[node name="Label_ProcessTickQuota" type="Label" parent="VBoxContainer_General/VBoxContainer_ProcessTickQuota"]
layout_mode = 2
theme = SubResource("Theme_o8ri3")
text = "Process Tick Quota"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer_General/VBoxContainer_ProcessTickQuota"]
layout_mode = 2

[node name="HSlider_ProcessTickQuota" type="HSlider" parent="VBoxContainer_General/VBoxContainer_ProcessTickQuota/HBoxContainer"]
custom_minimum_size = Vector2(500, 30)
layout_mode = 2
focus_mode = 0
min_value = 1.0
max_value = 16.0
value = 1.0

[node name="Label_ProcessTickQuotaValue" type="Label" parent="VBoxContainer_General/VBoxContainer_ProcessTickQuota/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "1"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer_General"]
layout_mode = 2

[node name="VBoxContainer_SceneRadius" type="VBoxContainer" parent="VBoxContainer_General"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10
alignment = 1

[node name="Label_SceneRadius" type="Label" parent="VBoxContainer_General/VBoxContainer_SceneRadius"]
layout_mode = 2
theme = SubResource("Theme_o8ri3")
text = "Scene Radius"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer_General/VBoxContainer_SceneRadius"]
layout_mode = 2

[node name="HSlider_SceneRadius" type="HSlider" parent="VBoxContainer_General/VBoxContainer_SceneRadius/HBoxContainer"]
custom_minimum_size = Vector2(500, 30)
layout_mode = 2
focus_mode = 0
min_value = 1.0
max_value = 16.0
value = 1.0

[node name="Label_SceneRadiusValue" type="Label" parent="VBoxContainer_General/VBoxContainer_SceneRadius/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "1"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer_General"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer_General"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="HBoxContainer_Gravity" type="HBoxContainer" parent="VBoxContainer_General/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Label_Gravity" type="Label" parent="VBoxContainer_General/HBoxContainer/HBoxContainer_Gravity"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = SubResource("Theme_o8ri3")
text = "Gravity
"

[node name="LineEdit_Gravity" type="LineEdit" parent="VBoxContainer_General/HBoxContainer/HBoxContainer_Gravity"]
layout_mode = 2
focus_mode = 0
text = "55.0"
editable = false

[node name="HBoxContainer_JumpVelocity" type="HBoxContainer" parent="VBoxContainer_General/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Label_JumpVelocity" type="Label" parent="VBoxContainer_General/HBoxContainer/HBoxContainer_JumpVelocity"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = SubResource("Theme_o8ri3")
text = "Jump Velocity
"

[node name="LineEdit_JumpVelocity" type="LineEdit" parent="VBoxContainer_General/HBoxContainer/HBoxContainer_JumpVelocity"]
layout_mode = 2
focus_mode = 0
text = "12.0"
editable = false

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer_General"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="HBoxContainer_RunSpeed" type="HBoxContainer" parent="VBoxContainer_General/HBoxContainer2"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Label_RunSpeed" type="Label" parent="VBoxContainer_General/HBoxContainer2/HBoxContainer_RunSpeed"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = SubResource("Theme_o8ri3")
text = "Run Speed
"

[node name="LineEdit_RunSpeed" type="LineEdit" parent="VBoxContainer_General/HBoxContainer2/HBoxContainer_RunSpeed"]
layout_mode = 2
focus_mode = 0
text = "20.0"
editable = false

[node name="HBoxContainer_WalkSpeed" type="HBoxContainer" parent="VBoxContainer_General/HBoxContainer2"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Label_WalkSpeed" type="Label" parent="VBoxContainer_General/HBoxContainer2/HBoxContainer_WalkSpeed"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = SubResource("Theme_o8ri3")
text = "Walk Speed"

[node name="LineEdit_WalkSpeed" type="LineEdit" parent="VBoxContainer_General/HBoxContainer2/HBoxContainer_WalkSpeed"]
layout_mode = 2
focus_mode = 0
text = "12.0"
editable = false

[node name="ColorRect_Navbar" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 59.0
grow_horizontal = 2
color = Color(0.0862745, 0.0862745, 0.0862745, 1)

[connection signal="value_changed" from="VBoxContainer_General/VBoxContainer_ProcessTickQuota/HBoxContainer/HSlider_ProcessTickQuota" to="." method="_on_h_slider_process_tick_quota_value_changed"]
[connection signal="value_changed" from="VBoxContainer_General/VBoxContainer_SceneRadius/HBoxContainer/HSlider_SceneRadius" to="." method="_on_h_slider_scene_radius_value_changed"]
